--- a/stm8code/Makefile
+++ b/stm8code/Makefile
@@ -1,14 +1,13 @@
-
-CC	sdcc
-SRCS	./main.c
-LIBS	-lstm8 -mstm8
-IDIR	-I./
-ODIR	./bin
-CFLAGS	$(IDIR)
-FLASHER	~/stm8flash/stm8flash
+CC=sdcc
+SRCS=main.c
+LIBS=-lstm8 -mstm8
+IDIR=-I./
+ODIR=bin
+CFLAGS=$(IDIR)
+FLASHER=~/stm8flash/stm8flash
 
 all:
-	mkdir -p $(ORIR)
+	mkdir -p $(ODIR)
 	$(CC) $(SRCS) $(CFLAGS) $(LIBS) --out-fmt-ihx -o$(ODIR)/
 
 .PHONY: clean	flash
@@ -17,4 +16,4 @@ clean:
 	@rm -rf $(ODIR)
 
 flash:
-	@$(FLASHER) -cstlink -pstm8s003k3 -w$(ODIR)/main.ihx
+	@sudo $(FLASHER) -cstlink -pstm8s003k3 -w$(ODIR)/main.ihx
